# chip8

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  chip8.bc  chip8.c  chip8.h  chip8.i  chip8.s  constants.c  constants.h  getsdl.sh  main  main.bc  main.c  main.i  main.out  main.s  operations.c  operations.h
.cache/clangd/index/: SDL.c.5B9A9FA5B31D6064.idx  SDL_RLEaccel.c.03956501F1507DB6.idx  SDL_RLEaccel_c.h.F4B745A5F6C87A11.idx  SDL_assert.c.C41E5DED773D459A.idx  SDL_assert_c.h.B457F38233F8C9A6.idx  SDL_atomic.c.904CDD0EBAEB5E1F.idx  SDL_audio.c.0191D54CC643DF6C.idx  SDL_audio_c.h.FB1E08F84111C7F3.idx  SDL_audio_channel_converters.h.F03243DAE5AD17FA.idx  SDL_audio_resampler_filter.h.B6E6AEA184467C99.idx  SDL_audiocvt.c.065CF4A425B13B99.idx  SDL_audiodev.c.5A6C4428677E4017.idx  SDL_audiotypecvt.c.678AE40ADB1F74B8.idx  SDL_blendfillrect.c.01D9ECBAFE36B2CE.idx  SDL_blendfillrect.h.D97CC4C4EABDA887.idx  SDL_blendline.c.A98DC546FE6C3CE5.idx  SDL_blendline.h.B33F5AAE05BA1F0D.idx  SDL_blendpoint.c.25DDA6B9085959A6.idx  SDL_blendpoint.h.FF50B517D162DE5A.idx  SDL_blit.c.35211AA6BF80BFF0.idx  SDL_blit.h.1D8E3C06083CA044.idx  SDL_blit_0.c.9134DB382629708B.idx  SDL_blit_1.c.803D621B7ADCCDBA.idx  SDL_blit_A.c.7BF4E5945360274D.idx  SDL_blit_N.c.CE8A2BB66A4AA475.idx  SDL_blit_auto.c.BF0309DDC1D90A30.idx  SDL_blit_auto.h.9EB3CE3A7B1F0896.idx  SDL_blit_copy.c.EEDDE7EDDE9A75CC.idx  SDL_blit_copy.h.9ACFBB5BD4718808.idx  SDL_blit_slow.c.CAB6FE2EEE50A3B2.idx  SDL_blit_slow.h.6C0CBE1A027BA7D1.idx  SDL_bmp.c.5F2DD2D2771DE932.idx  SDL_clipboard.c.D799F2D004BE2D8E.idx  SDL_clipboardevents.c.C3B1C37182EB9DF6.idx  SDL_clipboardevents_c.h.1818E64D3E6C3384.idx  SDL_cocoaclipboard.h.1BED7FE27088992D.idx  SDL_cocoaclipboard.m.566168B0EF133BF7.idx  SDL_cocoaevents.h.A7246EEE64DE596F.idx  SDL_cocoaevents.m.941F5459AD4D52C3.idx  SDL_cocoakeyboard.h.35155D2B23EEA75C.idx  (+314 more)
build2/: CMakeCache.txt  Makefile  compile_commands.json
build2/.cmake/api/v1/reply/: cmakeFiles-v1-c19b3467c9743c31e9ee.json  codemodel-v2-075f03271f05cb024791.json  index-2024-10-04T03-39-51-0406.json  target-chip8-Debug-258e22770b138243ddd8.json  toolchains-v1-2eac2b7980d1ee8218ed.json
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
